# SiliconSynapse

src/terra_sense/: CMakeLists.txt  package.xml
src/terra_sense/include/terra_sense/: terrain_layer.hpp
src/terra_sense/launch/: terrasense_gridmap.launch.py
src/terra_sense/scripts/: terrain_publisher.py
src/terra_sense/src/: terrain_layer.cpp
